# rike

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
rike/: github.py  hackernews.py  main.py  ui.py  utils.py
