[project]
name = "rike"
version = "0.1.0"
description = "Developer Intelligence CLI"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

authors = [
    {name = "Mukund"}
]

dependencies = [
    "requests>=2.32",
    "rich>=13.0"
]

keywords = ["cli", "github", "hackernews", "developer", "terminal"]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
]

[project.urls]
Homepage = "https://github.com/mukundzha/rike"
Repository = "https://github.com/mukundzha/rike"

[project.scripts]
rike = "rike.main:main"